# aeoru-erpnext-deploy

./: .gitignore  Dockerfile  README.md  VERSIONS  docker-compose.yml  setup.sh
frappe/: README.md  babel_extractors.csv  cypress.config.js  package.json  pyproject.toml
frappe/cypress/fixtures/: child_table_with_tabs.js  doctype_with_child_table_tabs.js
frappe/cypress/integration/: awesome_bar.js  control_attach.js  control_autocomplete.js  control_barcode.js  control_color.js  control_currency.js  control_data.js  control_date.js  control_date_range.js  control_duration.js  control_dynamic_link.js  control_float.js  control_icon.js  control_link.js  control_markdown_editor.js  control_phone.js  control_rating.js  control_select.js  custom_buttons.js  customize_form.js  dashboard.js  dashboard_chart.js  dashboard_links.js  data_field_form_validation.js  datetime.js  datetime_field_form_validation.js  depends_on.js  file_uploader.js  form.js  form_builder.js  form_tab_break.js  form_tour.js  grid.js  grid_configuration.js  grid_pagination.js  grid_row_form_tabs.js  grid_search.js  kanban.js  list_paging.js  list_view.js  (+20 more)
frappe/cypress/support/: commands.js
frappe/esbuild/: esbuild.js
frappe/frappe/: __init__.py  app.py  apps.py  auth.py  boot.py  build.py  cache_manager.py  client.py  coverage.py  deferred_insert.py  deprecation_dumpster.py  frappeclient.py  handler.py  hooks.py  installer.py  middlewares.py  migrate.py  monitor.py  oauth.py  parallel_test_runner.py  patches.txt  permissions.py  push_notification.py  realtime.py  recorder.py  sessions.py  share.py  translate.py  twofactor.py
frappe/frappe/api/: __init__.py  v1.py  v2.py
frappe/frappe/commands/: redis_utils.py  site.py  test_commands.py  testing.py  utils.py
frappe/frappe/core/: notifications.py
frappe/frappe/core/api/: user_invitation.py
frappe/frappe/database/: __init__.py  database.py  operator_map.py  query.py  schema.py  utils.py
frappe/frappe/database/mariadb/: database.py  mysqlclient.py  setup_db.py
frappe/frappe/database/postgres/: database.py  schema.py
frappe/frappe/database/sqlite/: database.py  schema.py
frappe/frappe/desk/: calendar.py  desktop.py  like.py  link_preview.py  listview.py  notifications.py  query_report.py  reportview.py  search.py  treeview.py  utils.py
frappe/frappe/desk/form/: assign_to.py  document_follow.py  linked_with.py  load.py  meta.py  save.py  utils.py
frappe/frappe/desktop_icon/: automation.json  build.json  data.json  email.json  framework.json  integrations.json  my_workspaces.json  printing.json  system.json  users.json  website.json
frappe/frappe/email/: __init__.py  email_body.py  frappemail.py  inbox.py  oauth.py  queue.py  receive.py  smtp.py  test_email_body.py  test_smtp.py
frappe/frappe/geo/: country_info.json  languages.csv
frappe/frappe/gettext/: translate.py
frappe/frappe/gettext/extractors/: desktop_icon.py  web_form.py  workspace.py  workspace_sidebar.py
frappe/frappe/integrations/: README.md  google_oauth.py  oauth2.py  utils.py
frappe/frappe/locale/: ar.po  bs.po  cs.po  da.po  de.po  eo.po  es.po  fa.po  fr.po  hr.po  hu.po  id.po  it.po  main.pot  my.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr_CS.po  sv.po  ta.po  th.po  tr.po  vi.po  zh.po
frappe/frappe/model/: __init__.py  base_document.py  create_new.py  db_query.py  delete_doc.py  document.py  dynamic_links.py  mapper.py  meta.py  naming.py  qb_query.py  rename_doc.py  sync.py  trace.py  workflow.py
frappe/frappe/model/utils/: link_count.py  mask.py  rename_field.py  user_settings.py
frappe/frappe/modules/: export_file.py  import_file.py  patch_handler.py  utils.py
frappe/frappe/patches/v14_0/: drop_unused_indexes.py  set_document_expiry_default.py
frappe/frappe/patches/v15_0/: drop_modified_index.py  remove_implicit_primary_key.py
frappe/frappe/pulse/: utils.py
frappe/frappe/query_builder/: __init__.py  builder.py  custom.py  functions.py  utils.py
frappe/frappe/search/: __init__.py  sqlite_search.md  sqlite_search.py
frappe/frappe/templates/: base.html
frappe/frappe/testing/: config.py  environment.py  loader.py  result.py
frappe/frappe/tests/: test_api.py  test_api_v2.py  test_auth.py  test_base_document.py  test_boot.py  test_caching.py  test_client.py  test_db.py  test_db_query.py  test_db_update.py  test_defaults.py  test_document.py  test_domainification.py  test_email.py  test_fixture_import.py  test_form_load.py  test_frappe_client.py  test_global_search.py  test_helpers.py  test_hooks.py  test_modules.py  test_naming.py  test_nestedset.py  test_oauth20.py  test_patches.py  test_perf.py  test_permissions.py  test_project_meta.py  test_query.py  test_query_builder.py  test_query_report.py  test_removing_orphans.py  test_reportview.py  test_search.py  test_sitemap.py  test_sqlite_search.py  test_trace.py  test_utils.py  test_webform.py  test_website.py  (+1 more)
frappe/frappe/tests/utils/: __init__.py  (+1 more)
frappe/frappe/types/: filter.py  frappedict.py
frappe/frappe/utils/: __init__.py  background_jobs.py  backups.py  boilerplate.py  change_log.py  connections.py  csvutils.py  data.py  error.py  file_manager.py  fixtures.py  formatters.py  global_search.py  goal.py  html_utils.py  image.py  inplacevar.py  install.py  make_random.py  messages.py  modules.py  nestedset.py  oauth.py  password.py  password_strength.py  pdf.py  print_format.py  print_utils.py  redis_wrapper.py  response.py  safe_exec.py  scheduler.py  translations.py  typing_validations.py  user.py  weasyprint.py  xlsxutils.py
frappe/frappe/website/: path_resolver.py  utils.py  website_generator.py
frappe/frappe/workspace_sidebar/: automation.json  build.json  data.json  email.json  integrations.json  my_workspaces.json  printing.json  system.json  users.json  website.json
frappe/frappe/www/: about.py  attribution.py  contact.py  desk.html  desk.py  list.py  login.html  login.py  me.html  me.py  message.html  portal.html  portal.py  printview.py  qrcode.html  update-password.html
frappe/realtime/: index.js
frappe/realtime/middlewares/: authenticate.js
(+2256 files in other folders)
